--- a/style.css
+++ b/style.css
@@ -23,6 +23,7 @@ body{
     background: #fff;
     padding: 40px 30px;
     box-shadow: 0 5px 10px rgba(0, 0, 0, 2);
+    perspective: 2700px;
 }
 
 .container .cover{
@@ -31,8 +32,78 @@ body{
     left: 50%;
     height: 100%;
     width: 50%;
+    z-index: 96;
+    transition: all 1s ease;
+    transform-origin: left;
+    transform-style: preserve-3d;
+}
+
+.container .cover::before{
+    content: '';
+    position: absolute;
+    height: 100%;
+    width: 100%;
     background: orange;
-    z-index: 98;
+    opacity: 0.5;
+    z-index: 95;
+    
+}
+
+.container .cover::after{
+    content: '';
+    position: absolute;
+    height: 100%;
+    width: 100%;
+    transform: rotateY(180deg);
+    background: orange;
+    opacity: 0.5;
+    z-index: 95;
+    
+}
+
+.container .cover .texto{
+    position: absolute;
+    z-index: 100;
+    height: 100%;
+    width: 100%;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+}
+
+.cover .frente .texto .texto-1{
+    font-size: 26px;   
+    font-weight: 600;
+    color: #fff;
+    text-align: center;
+    backface-visibility: hidden;
+}
+
+.cover .frente .texto .texto-1{
+    font-size: 26px;   
+    font-weight: 600;
+    color: #fff;
+    text-align: center;
+    backface-visibility: hidden;
+}
+
+.cover .frente .texto .texto-2{
+    font-size: 15px;
+    font-weight: 500;
+}
+
+.container #flip:checked ~ .cover{
+    transform: rotateY(-180deg);
+}
+
+.container .cover img{
+    position: absolute;
+    height: 100%;
+    width: 100%;
+    object-fit: cover;
+    z-index: 12;
+    backface-visibility: visible;
 }
 
 .container .form{
@@ -46,8 +117,10 @@ body{
     align-items: center;
     justify-content: center;
 }
-.conteudo-form .form-login{
+.conteudo-form .form-login,
+.conteudo-form .form-cadastrar{
     width: calc(100% / 2 - 25px);
+    margin: 40px;
    /* background: red; */
 }
 
@@ -66,6 +139,10 @@ form .conteudo-form .titulo::after{
     height: 3px;
     width: 25px;
     background: orange;
+}
+
+form .form-cadastrar .titulo::before{
+    width: 20px;
 }
 
 form .conteudo-form .input-boxes{
@@ -120,7 +197,9 @@ form .conteudo-form .texto a:hover{
 
 form .conteudo-form .button{
     color: #fff;
-    margin: 40px;
+    margin-top: 40px;
+    margin-bottom: 20px;
+    margin-right: 40px;
 }
 
 form .conteudo-form .button input{
@@ -137,10 +216,38 @@ form .conteudo-form .button input:hover{
     color: #333;
 }
 
-form .conteudo-form .label a{
+form .conteudo-form label{
     text-decoration: none;
 }
 
-form .conteudo-form .label a:hover{
+form .conteudo-form label:hover{
     text-decoration: underline;
+}
+
+form .conteudo-form .login-texto,
+form .conteudo-form .cadastrar-texto{
+    text-align: center;
+    margin-top: 25px;
+}
+.container #flip{
+    display: none;
+}
+
+@media (max-width: 730px){
+    .container .cover{
+        display: none;
+    }
+    .conteudo-form .form-login,
+    .conteudo-form .form-cadastrar{
+        width: 100%;
+    }
+    .conteudo-form .form-cadastrar{
+        display: none;
+    }
+    .container #flip:checked ~ form .form-cadastrar{
+        display: block;
+    }
+    .container #flip:checked ~ form .form-cadastrar{
+        display: block;
+    }
 }
